--- a/styles/globals.css
+++ b/styles/globals.css
@@ -13,9 +13,14 @@ a {
 
 * {
   box-sizing: border-box;
+  --violet: #9610C6;
 }
 
 p {
   padding: 0;
   margin: 0;
+}
+div > label{
+  margin-top: 10px;
+  font-size: 16px;
 }
