--- a/styles/globals.css
+++ b/styles/globals.css
@@ -13,7 +13,7 @@ a {
 
 * {
   box-sizing: border-box;
-  --violet: #9610C6;
+  --violet: #9610c6;
   --pink: #ff7b7b;
 }
 
@@ -21,7 +21,7 @@ p {
   padding: 0;
   margin: 0;
 }
-div > label{
+form > label {
   margin-top: 10px;
-  font-size: 16px;
+  font-size: 26px;
 }
