--- a/styles/globals.css
+++ b/styles/globals.css
@@ -25,3 +25,14 @@ form > label {
   margin-top: 10px;
   font-size: 26px;
 }
+
+.embla {
+  overflow: hidden;
+}
+.embla__container {
+  display: flex;
+}
+.embla__slide {
+  position: relative;
+  flex: 0 0 100%;
+}
