--- a/styles/loginpage.module.css
+++ b/styles/loginpage.module.css
@@ -35,6 +35,7 @@
   align-items: center;
   justify-content: center;
   font-size: 16px;
+  margin-bottom: 10px;
 }
 .roundbutton {
   background-color: var(--violet);
